fixing clipping box in face portrait

--- a/style.css
+++ b/style.css
@@ -56,18 +56,17 @@ a:hover { text-decoration: underline; }
   text-align: center;
 }
 
-.portrait {
+#face {
   width: 200px;
   height: 200px;
   position: relative;
   top: 100px;
-}
-
-.portrait img {
   border-radius: 50%;
-  width: 100%;
-  height: 100%;
+  display: block;
   border: 10px solid #fff;
+  background-image: url('face.jpg');
+  background-position: center center;
+  background-size: contain;
 }
 
 .cursor:after {
